--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,3 +1,8 @@
+.sidebar {
+  padding-top: 0.75em;
+  padding-left: 0.75em;
+}
+
 .board-information {
   border-radius: 0.25em;
   background: #CFC;
