implement flash message

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,6 +9,7 @@ html
     = javascript_pack_tag 'application'
   body
     .container-fuild
+      = render 'shared/flash_messages'
       .row
         .col-2.position-fixed
           = render 'shared/sidebar'
