--- a/app/views/thres/new.html.slim
+++ b/app/views/thres/new.html.slim
@@ -1,16 +1,22 @@
-= render 'shared/error_messages', object: @thread_form
-= form_with model: @thread_form, url: board_thres_path, local: true do |f|
-  .form-group
-    = f.label :username
-    = f.text_field :username, class: 'form-control', placeholder: '名前を入力してください'
-  .form-group
-    = f.label :useremail
-    = f.text_field :useremail, class: 'form-control', placeholder: '（任意）メールアドレスを入力してください'
-  .form-group
-    = f.label :title
-    = f.text_field :title, class: 'form-control', placeholder: 'スレッドのタイトルを入力してください'
-  .form-group
-    = f.label :body
-    = f.text_area :body, class: 'form-control', placeholder: '本文を入力してください'
-  = f.submit 'スレを立てる', class: 'btn btn-raised btn-success'
+.text-center.mt-5
+  h1 5ch
+.container
+  .row
+    .col-8.offset-2.thread-form
+      = render 'shared/error_messages', object: @thread_form
+      = form_with model: @thread_form, url: board_thres_path, local: true do |f|
+        .form-row
+          .form-group.col-6
+            = f.label :username
+            = f.text_field :username, class: 'form-control', placeholder: '名前を入力してください'
+          .form-group.col-6
+            = f.label :useremail
+            = f.text_field :useremail, class: 'form-control', placeholder: '（任意）メールアドレスを入力してください'
+        .form-group
+          = f.label :title
+          = f.text_field :title, class: 'form-control', placeholder: 'スレッドのタイトルを入力してください'
+        .form-group
+          = f.label :body
+          = f.text_area :body, class: 'form-control', placeholder: '本文を入力してください', rows: 5
+        = f.submit 'スレを立てる', class: 'btn btn-raised btn-success'
 
