refactor site heading

--- a/app/views/boards/show.html.slim
+++ b/app/views/boards/show.html.slim
@@ -1,5 +1,4 @@
-.text-center.mt-5
-  h1 5ch
+= render 'shared/site_heading'
 .container.board-information
   span.headline-board-name
     = @board.name
