--- a/app/views/static_pages/top.html.slim
+++ b/app/views/static_pages/top.html.slim
@@ -1,5 +1,5 @@
-.text-center.mt-5
-  h1 5ch
+= render 'shared/site_heading'
+.text-center
   .lead.mt-3
     |「プログラミング」から「今朝のおかず」までを手広くカバーする掲示板群
     p 『5ch』へようこそ！
