add button to link each other

--- a/app/views/boards/show.html.slim
+++ b/app/views/boards/show.html.slim
@@ -4,4 +4,7 @@
     = @board.name
   .board-description.mt-3
     = @board.description
+  .text-center.mt-3
+    = link_to new_board_thre_path @board do
+      button.btn.btn-raised.btn-success 新しいスレを立てる
 
