--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -25,3 +25,9 @@
   background: #f2f3f7;
   padding: 1.5em;
 }
+
+.username-in-thread {
+  margin-left: 0.75em;
+  color: #008000;
+  display: inline;
+}
