--- a/app/views/thres/show.html.slim
+++ b/app/views/thres/show.html.slim
@@ -1,14 +1,5 @@
 h2 = @thre.title
 = link_to board_path @thre.board do
   button.btn.btn-raised.btn-primary.d-block.mb-3 掲示板に戻る
-.d-inline
-  | 1
-.username-in-thread
-  = @thre.username
-.ml-3.d-inline
-  = l @thre.created_at
-.ml-3.d-inline 
-  | ID: 
-  = @thre.userid
-.mt-3
-  = @thre.body
+hr
+= render @thre
