--- a/app/views/boards/show.html.slim
+++ b/app/views/boards/show.html.slim
@@ -7,5 +7,5 @@
   .text-center.mt-3
     = link_to new_board_thre_path @board do
       button.btn.btn-raised.btn-success 新しいスレを立てる
-= render partial: 'thres/thre', collection: @thres
+= render partial: 'thres/thre_and_heading', collection: @thres, as: :thre
 
