--- a/app/views/boards/show.html.slim
+++ b/app/views/boards/show.html.slim
@@ -3,7 +3,7 @@
   span.headline-board-name
     = @board.name
   .board-description.mt-3
-    = simple_format @board.description
+    = raw Rinku.auto_link(simple_format(@board.description))
   .text-center.mt-3
     = link_to new_board_thre_path @board do
       button.btn.btn-raised.btn-success 新しいスレを立てる
