--- a/app/views/boards/show.html.slim
+++ b/app/views/boards/show.html.slim
@@ -8,4 +8,6 @@
     = link_to new_board_thre_path @board do
       button.btn.btn-raised.btn-success 新しいスレを立てる
 = render partial: 'thres/thre_and_heading', collection: @thres, as: :thre
+hr
+= paginate @thres
 
